<?xml version="1.0"?>
<package format="2">
  <name>my_package2</name>
  <version>0.0.0</version>
  <description>The my_package2 package</description>
  <maintainer email="mikhail@todo.todo">mikhail</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
</package>
